--- a/src/style/iconfont.css
+++ b/src/style/iconfont.css
@@ -1,14 +1,15 @@
 /* CDN 服务仅供平台体验和调试使用，平台不承诺服务的稳定性，企业客户需下载字体包自行发布使用并做好备份。 */
 @font-face {
   font-family: 'iconfont';  /* Project id 3757497 */
-  src: url('//at.alicdn.com/t/c/font_3757497_r35dsdrtek.woff2?t=1667892929497') format('woff2'),
-       url('//at.alicdn.com/t/c/font_3757497_r35dsdrtek.woff?t=1667892929497') format('woff'),
-       url('//at.alicdn.com/t/c/font_3757497_r35dsdrtek.ttf?t=1667892929497') format('truetype');
+  src: url('//at.alicdn.com/t/c/font_3757497_5wjvuwp5blj.woff2?t=1667908167227') format('woff2'),
+       url('//at.alicdn.com/t/c/font_3757497_5wjvuwp5blj.woff?t=1667908167227') format('woff'),
+       url('//at.alicdn.com/t/c/font_3757497_5wjvuwp5blj.ttf?t=1667908167227') format('truetype');
 }
 
 .iconfont{
   font-family:"iconfont" !important;
-  font-size:16px;font-style:normal;
+  font-size: .16rem;
+  font-style:normal;
   -webkit-font-smoothing: antialiased;
   -webkit-text-stroke-width: 0.2px;
   -moz-osx-font-smoothing: grayscale;}
